Edit start-point files to give basic working red,amber,green progression

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -7,6 +7,10 @@
     "cyber-dojo.sh"
   ],
 
+  "hidden_filenames": [
+    "zig-cache/.*"
+  ],
+
   "image_name": "cyberdojofoundation/zig-test",
 
   "filename_extension": ".zig"
