Remove hidden_filenames from manifest; use trap handler in cyber-dojo.sh instead

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -9,6 +9,5 @@
   ],
   "filename_extension": [ ".zig" ],
   "max_seconds": 10,
-  "tab_size": 4,
-  "hidden_filenames":  [ "zig-cache/.*" ]
+  "tab_size": 4
 }
